Bug 682554.  Move onreadystatechange to live on Document only.  r=smaug